# HyperLPR

./: .gitignore
Prj-Linux/hyperlpr/: .gitignore  CMakeLists.txt
Prj-Linux/hyperlpr/demos/: test.cpp  test_detection.cpp  test_fastdeskew.cpp  test_finemapping.cpp  test_pipeline.cpp  test_recognization.cpp
Prj-Linux/hyperlpr/include/: niBlackThreshold.h
Prj-Linux/hyperlpr/src/: api.cpp
